adding some more options to this test file

--- a/test.cfg
+++ b/test.cfg
@@ -1,6 +1,6 @@
 vali_set_size 3
 diagnostics_rate 100
-trans_rela True
+trans_rela False
 alpha (0.01,  0.01,  0.01)
 training_data_path ./data/w10r2_train.txt.gz
 calculate_ll True
@@ -13,7 +13,9 @@ fix_words False
 offset 0
 num_samples 5
 sampling_rate 100
-n_epochs 1
+n_epochs 100
 tau (0, 0, 0)
 dimension 3
+online False
 output_root ./output/test_batch_inexact_persistent_100d_ADAM_unnormed_dot
+calc_ll True
